# weltreise-log-rust

./: .env  Cargo.toml
migrations/20170802211031_create_entries/: up.sql
migrations/20170803000437_update_entries/: down.sql  up.sql
src/: main.rs  models.rs
