[package]
name = "weltreise_log"
version = "0.1.0"
authors = ["Benjamin Fritsch <beanie@benle.de>"]

[dependencies]
egg-mode = "0.9.0"
dotenv = "0.9.0"
diesel = { version = "0.15.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
chrono = "0.4.0"
regex = "0.2"
